[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/Daily Quests/NoticeBoard.gd" type="Script" id=1]
[ext_resource path="res://Assets/NoticeBoard/Accept Quest.png" type="Texture" id=2]
[ext_resource path="res://Assets/NoticeBoard/Accept Quest(1).png" type="Texture" id=3]
[ext_resource path="res://Assets/NoticeBoard/UnifrakturMaguntia-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/NoticeBoard/NoticeBoard.png" type="Texture" id=5]
[ext_resource path="res://Assets/NoticeBoard/Accept Quest(2).png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="NoticeBoard" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 64.0
margin_right = -128.0
margin_bottom = -80.0

[node name="ColorRect" type="ColorRect" parent="Control"]
modulate = Color( 1, 1, 1, 0.462745 )
margin_left = -8.0
margin_top = -8.0
margin_right = 1032.0
margin_bottom = 584.0
color = Color( 0.278431, 0.168627, 0.113725, 1 )

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )

[node name="Col1" type="VBoxContainer" parent="Control"]
margin_left = 96.0
margin_top = 80.0
margin_right = 352.0
margin_bottom = 504.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Col1"]
margin_right = 256.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 380 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "No Quest"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Col1"]
margin_top = 384.0
margin_right = 256.0
margin_bottom = 424.0

[node name="MarginContainer" type="MarginContainer" parent="Control/Col1/HBoxContainer"]
margin_right = 66.0
margin_bottom = 40.0
custom_constants/margin_right = 66

[node name="TextureButton1" type="TextureButton" parent="Control/Col1/HBoxContainer"]
margin_left = 70.0
margin_right = 182.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 6 )
stretch_mode = 2

[node name="Col2" type="VBoxContainer" parent="Control"]
margin_left = 384.0
margin_top = 80.0
margin_right = 640.0
margin_bottom = 504.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Col2"]
margin_right = 256.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 380 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "No Quest"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Col2"]
margin_top = 384.0
margin_right = 256.0
margin_bottom = 424.0

[node name="MarginContainer" type="MarginContainer" parent="Control/Col2/HBoxContainer"]
margin_right = 66.0
margin_bottom = 40.0
custom_constants/margin_right = 66

[node name="TextureButton2" type="TextureButton" parent="Control/Col2/HBoxContainer"]
margin_left = 70.0
margin_right = 182.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
stretch_mode = 2

[node name="Col3" type="VBoxContainer" parent="Control"]
margin_left = 688.0
margin_top = 80.0
margin_right = 944.0
margin_bottom = 504.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Col3"]
margin_right = 256.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 380 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "No Quest"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Col3"]
margin_top = 384.0
margin_right = 256.0
margin_bottom = 424.0

[node name="MarginContainer" type="MarginContainer" parent="Control/Col3/HBoxContainer"]
margin_right = 66.0
margin_bottom = 40.0
custom_constants/margin_right = 66

[node name="TextureButton3" type="TextureButton" parent="Control/Col3/HBoxContainer"]
margin_left = 70.0
margin_right = 182.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
stretch_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Control/Col1/HBoxContainer/TextureButton1" to="." method="_on_TextureButton1_pressed"]
[connection signal="pressed" from="Control/Col2/HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="Control/Col3/HBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
